fixed dropdown items

--- a/index.html
+++ b/index.html
@@ -143,8 +143,151 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <ul>
-                        <li class="mb-3" id="jobItem1">
+                    <!-- <ul class="nav nav-tabs" role="tablist">
+                        <li class="nav-item mb-3 w-100">
+                            <a class="jobs-item" data-toggle="tab" href="#tab1" role="tab">
+                                <div class="jobs-item-left">
+                                    <img src="./images/dropdown-icon.png">
+                                    <span>Hoya-Eystrup</span>
+                                </div> 
+                                <div class="jobs-item-right">
+                                    <span>Pflegehilfskräfte (m/w)</span>
+                                    <img src="./images/dropdown-arrow-right.png">
+                                </div>  
+                            </a>
+                            <div class="tab-content">
+                                <div class="tab-pane fade show active" id="tab1">
+                                    <p class="my-3 section-lead"><b>Lorem ipsum dolor, sit amet consectetur adipisicing
+                                        elit. Quisquam et
+                                        dolor,
+                                        tempore
+                                        provident dolores neque accusantium quos totam adipisci consequatur inventore
+                                        corporis, molestias harum ea cumque quibusdam facere debitis.</b></p>
+                                    <p class="section-lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                    Quisquam et dolor, tempore
+                                    provident dolores neque accusantium quos totam adipisci consequatur inventore
+                                    corporis, molestias harum ea cumque quibusdam facere debitis. Eligendi eius
+                                    voluptates optio quisquam ratione accusamus et maxime aut nemo. Quo earum pariatur
+                                    quisquam voluptatibus delectus perspiciatis nisi minus eos?</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="nav-item mb-3 w-100">
+                            <a href="#tab2" class="jobs-item" data-toggle="tab" role="tab">
+                                <div class="jobs-item-left">
+                                    <img src="./images/dropdown-icon.png">
+                                    <span>Bruchhausen</span>
+                                </div>
+                                <div class="jobs-item-right">
+                                    <span>Examinierte Pflegefachkräfte (m/w)</span>
+                                    <img src="./images/dropdown-arrow-right.png">
+                                </div>
+                            </a>
+                            <div class="tab-content">
+                                <div class="tab-pane fade" id="tab2">
+                                    <p class="my-3 section-lead"><b>Lorem ipsum dolor, sit amet consectetur adipisicing
+                                        elit. Quisquam et
+                                        dolor,
+                                        tempore
+                                        provident dolores neque accusantium quos totam adipisci consequatur inventore
+                                        corporis, molestias harum ea cumque quibusdam facere debitis.</b></p>
+                                    <p class="section-lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                    Quisquam et dolor, tempore
+                                    provident dolores neque accusantium quos totam adipisci consequatur inventore
+                                    corporis, molestias harum ea cumque quibusdam facere debitis. Eligendi eius
+                                    voluptates optio quisquam ratione accusamus et maxime aut nemo. Quo earum pariatur
+                                    quisquam voluptatibus delectus perspiciatis nisi minus eos?</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="nav-item mb-3 w-100">
+                            <a href="#tab3" class="jobs-item" data-toggle="tab" role="tab">
+                                <div class="jobs-item-left">
+                                    <img src="./images/dropdown-icon.png">
+                                    <span>Branstorf</span>
+                                </div>
+                                <div class="jobs-item-right">
+                                    <span>Betreuungskräfte (m/w)</span>
+                                    <img src="./images/dropdown-arrow-right.png">
+                                </div>
+                            </a>
+                            <div class="tab-content">
+                                <div class="tab-pane fade" id="tab3">
+                                    <p class="my-3 section-lead"><b>Lorem ipsum dolor, sit amet consectetur adipisicing
+                                        elit. Quisquam et
+                                        dolor,
+                                        tempore
+                                        provident dolores neque accusantium quos totam adipisci consequatur inventore
+                                        corporis, molestias harum ea cumque quibusdam facere debitis.</b></p>
+                                    <p class="section-lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                    Quisquam et dolor, tempore
+                                    provident dolores neque accusantium quos totam adipisci consequatur inventore
+                                    corporis, molestias harum ea cumque quibusdam facere debitis. Eligendi eius
+                                    voluptates optio quisquam ratione accusamus et maxime aut nemo. Quo earum pariatur
+                                    quisquam voluptatibus delectus perspiciatis nisi minus eos?</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="nav-item mb-3 w-100">
+                            <a href="#tab4" class="jobs-item" data-toggle="tab" role="tab">
+                                <div class="jobs-item-left">
+                                    <img src="./images/dropdown-icon.png">
+                                    <span>Diepholz</span>
+                                </div>
+                                <div class="jobs-item-right">
+                                    <span>Mitarbeiter in der Wäscherei (m/w)</span>
+                                    <img src="./images/dropdown-arrow-right.png">
+                                </div>
+                            </a>
+                            <div class="tab-content">
+                                <div class="tab-pane fade" id="tab4">
+                                    <p class="my-3 section-lead"><b>Lorem ipsum dolor, sit amet consectetur adipisicing
+                                        elit. Quisquam et
+                                        dolor,
+                                        tempore
+                                        provident dolores neque accusantium quos totam adipisci consequatur inventore
+                                        corporis, molestias harum ea cumque quibusdam facere debitis.</b></p>
+                                    <p class="section-lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Quisquam et dolor, tempore
+                                        provident dolores neque accusantium quos totam adipisci consequatur inventore
+                                        corporis, molestias harum ea cumque quibusdam facere debitis. Eligendi eius
+                                        voluptates optio quisquam ratione accusamus et maxime aut nemo. Quo earum pariatur
+                                        quisquam voluptatibus delectus perspiciatis nisi minus eos?</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="nav-item mb-3 w-100">
+                            <a href="#tab5" class="jobs-item" data-toggle="tab" role="tab">
+                                <div class="jobs-item-left">
+                                    <img src="./images/dropdown-icon.png">
+                                    <span>Syke</span>
+                                </div>
+                                <div class="jobs-item-right">
+                                    <span>Pflegehilfskräfte (m/w)</span>
+                                    <img src="./images/dropdown-arrow-right.png">
+                                </div>
+                            </a>
+                            <div class="tab-content">
+                                <div class="tab-pane fade" id="tab5">
+                                    <p class="my-3 section-lead"><b>Lorem ipsum dolor, sit amet consectetur adipisicing
+                                        elit. Quisquam et
+                                        dolor,
+                                        tempore
+                                        provident dolores neque accusantium quos totam adipisci consequatur inventore
+                                        corporis, molestias harum ea cumque quibusdam facere debitis.</b></p>
+                                    <p class="section-lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Quisquam et dolor, tempore
+                                        provident dolores neque accusantium quos totam adipisci consequatur inventore
+                                        corporis, molestias harum ea cumque quibusdam facere debitis. Eligendi eius
+                                        voluptates optio quisquam ratione accusamus et maxime aut nemo. Quo earum pariatur
+                                        quisquam voluptatibus delectus perspiciatis nisi minus eos?</p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul> -->
+
+                    <div class="dropdown-items">
+                        <div class="mb-3" id="jobItem1">
                             <a href="#collapse1" class="jobs-item" data-toggle="collapse" aria-expanded="true"
                                 aria-controls="collapse1">
                                 <div class="jobs-item-left">
@@ -170,8 +313,8 @@
                                     voluptates optio quisquam ratione accusamus et maxime aut nemo. Quo earum pariatur
                                     quisquam voluptatibus delectus perspiciatis nisi minus eos?</p>
                             </div>
-                        </li>
-                        <li class="mb-3" id="jobItem2">
+                        </div>
+                        <div class="mb-3" id="jobItem2">
                             <a href="#collapse2" class="jobs-item" data-toggle="collapse" aria-expanded="true"
                                 aria-controls="collapse2">
                                 <div class="jobs-item-left">
@@ -197,8 +340,8 @@
                                     voluptates optio quisquam ratione accusamus et maxime aut nemo. Quo earum pariatur
                                     quisquam voluptatibus delectus perspiciatis nisi minus eos?</p>
                             </div>
-                        </li>
-                        <li class="mb-3" id="jobItem3">
+                        </div>
+                        <div class="mb-3" id="jobItem3">
                             <a href="#collapse3" class="jobs-item" data-toggle="collapse" aria-expanded="true"
                                 aria-controls="collapse3">
                                 <div class="jobs-item-left">
@@ -224,8 +367,8 @@
                                     voluptates optio quisquam ratione accusamus et maxime aut nemo. Quo earum pariatur
                                     quisquam voluptatibus delectus perspiciatis nisi minus eos?</p>
                             </div>
-                        </li>
-                        <li class="mb-3" id="jobItem4">
+                        </div>
+                        <div class="mb-3" id="jobItem4">
                             <a href="#collapse4" class="jobs-item" data-toggle="collapse" aria-expanded="true"
                                 aria-controls="collapse4">
                                 <div class="jobs-item-left">
@@ -251,8 +394,8 @@
                                     voluptates optio quisquam ratione accusamus et maxime aut nemo. Quo earum pariatur
                                     quisquam voluptatibus delectus perspiciatis nisi minus eos?</p>
                             </div>
-                        </li>
-                        <li id="jobItem5">
+                        </div>
+                        <div id="jobItem5">
                             <a href="#collapse5" class="jobs-item" data-toggle="collapse" aria-expanded="true"
                                 aria-controls="collapse5">
                                 <div class="jobs-item-left">
@@ -278,8 +421,8 @@
                                     voluptates optio quisquam ratione accusamus et maxime aut nemo. Quo earum pariatur
                                     quisquam voluptatibus delectus perspiciatis nisi minus eos?</p>
                             </div>
-                        </li>
-                    </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
